// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders - currency 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  border: none;
  border-color: #D2D2D2;
  background-color: transparent;
  color: #292924;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: initial;
  opacity: 1;
  padding: 18px 14px;
  background-color: #FFFFFF;
  border: 2px solid #D2D2D2;
  border-radius: 12px;
  height: auto;
  border-color: #D2D2D2;
  -moz-appearance: textfield;
}

.c4:hover,
.c4:focus-within {
  border-color: #b9b9b9;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  right: 58px;
  margin-right: -58px;
}

.c6 {
  width: 24px;
  height: 24px;
  background-color: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
}

@media (min-width:0px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
  prefix="$"
>
  <label
    class="c1 c2"
    color="sesame"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="10"
        type="number"
        value="50"
      />
      <div
        class="c5"
      >
        <button
          class="c6"
        >
          <span
            class="c7"
            color="sesame"
            rotate="180"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
        <button
          class="c6"
        >
          <span
            class="c8"
            color="sesame"
            rotate="0"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders - disabled 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  border: none;
  border-color: #D2D2D2;
  background-color: transparent;
  color: #292924;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: not-allowed;
  opacity: 0.5;
  padding: 18px 14px;
  background-color: #FFFFFF;
  border: 2px solid #D2D2D2;
  border-radius: 12px;
  height: auto;
  -moz-appearance: textfield;
}

.c4:hover,
.c4:focus-within {
  border-color: #b9b9b9;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

@media (min-width:0px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="sesame"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        disabled=""
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="0"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - error 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #DF2929;
}

.c10 {
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
  text-align: left;
  cursor: inherit;
  color: #DF2929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  border: none;
  border-color: #DF2929;
  background-color: transparent;
  color: #DF2929;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: initial;
  opacity: 1;
  padding: 18px 14px;
  background-color: #FFFFFF;
  border: 2px solid #DF2929;
  border-radius: 12px;
  height: auto;
  border-color: #D2D2D2;
  -moz-appearance: textfield;
}

.c4:hover,
.c4:focus-within {
  border-color: #DF2929;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  right: 58px;
  margin-right: -58px;
}

.c6 {
  width: 24px;
  height: 24px;
  background-color: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
}

@media (min-width:0px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:0px) {
  .c9 {
    margin-top: 8px;
  }
}

<div
  class="c0"
  prefix="$"
>
  <label
    class="c1 c2"
    color="strawberry"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="10"
        type="number"
        value="200"
      />
      <div
        class="c5"
      >
        <button
          class="c6"
        >
          <span
            class="c7"
            color="sesame"
            rotate="180"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
        <button
          class="c6"
        >
          <span
            class="c8"
            color="sesame"
            rotate="0"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <span
    class="c9 c10"
    color="strawberry"
    cursor="inherit"
    title=""
  >
    Oh gosh, this is an error isn't it!
  </span>
</div>
`;

exports[`renders - number 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  cursor: inherit;
  color: #DF2929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c5 {
  border: none;
  border-color: #D2D2D2;
  background-color: transparent;
  color: #292924;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: initial;
  opacity: 1;
  padding: 18px 14px;
  background-color: #FFFFFF;
  border: 2px solid #D2D2D2;
  border-radius: 12px;
  height: auto;
  -moz-appearance: textfield;
}

.c5:hover,
.c5:focus-within {
  border-color: #b9b9b9;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5::-webkit-input-placeholder {
  color: #636768;
}

.c5::-moz-placeholder {
  color: #636768;
}

.c5:-ms-input-placeholder {
  color: #636768;
}

.c5::placeholder {
  color: #636768;
}

@media (min-width:0px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media (min-width:0px) {
  .c4 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:0px) {
  .c4 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="sesame"
    cursor="inherit"
    for="numberInput"
    title=""
  >
    Number
    <span
      class="c3"
      color="strawberry"
      cursor="inherit"
      title=""
    >
      *
    </span>
  </label>
  <div
    class=""
  >
    <div
      class="c4"
    >
      <input
        class="c5"
        id="numberInput"
        name="numberInput"
        placeholder="0.00"
        step="0"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - tel 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  border: none;
  border-color: #D2D2D2;
  background-color: transparent;
  color: #292924;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: initial;
  opacity: 1;
  padding: 18px 14px;
  background-color: #FFFFFF;
  border: 2px solid #D2D2D2;
  border-radius: 12px;
  height: auto;
  -moz-appearance: textfield;
}

.c4:hover,
.c4:focus-within {
  border-color: #b9b9b9;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

@media (min-width:0px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
  prefix="+44"
>
  <label
    class="c1 c2"
    color="sesame"
    cursor="inherit"
    for="tel"
    title=""
  >
    Telephone number
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="tel"
        name="telephoneNumber"
        placeholder="07446875876"
        step="0"
        type="tel"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - with suffix 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  border: none;
  border-color: #D2D2D2;
  background-color: transparent;
  color: #292924;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: initial;
  opacity: 1;
  padding: 18px 14px;
  background-color: #FFFFFF;
  border: 2px solid #D2D2D2;
  border-radius: 12px;
  height: auto;
  -moz-appearance: textfield;
}

.c4:hover,
.c4:focus-within {
  border-color: #b9b9b9;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

@media (min-width:0px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="sesame"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="0"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - with trailing icon 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  border: none;
  border-color: #D2D2D2;
  background-color: transparent;
  color: #292924;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: initial;
  opacity: 1;
  padding: 18px 14px;
  background-color: #FFFFFF;
  border: 2px solid #D2D2D2;
  border-radius: 12px;
  height: auto;
  -moz-appearance: textfield;
}

.c4:hover,
.c4:focus-within {
  border-color: #b9b9b9;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

.c6 {
  position: relative;
  right: 36px;
  margin-right: -36px;
}

@media (min-width:0px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:0px) {
  .c3 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
  prefix="$"
>
  <label
    class="c1 c2"
    color="sesame"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="0"
        type="number"
        value=""
      />
      <span
        class="c5 c6"
        color="sesame"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10a1 1 0 100-2c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8c0 1.103-.897 2-2 2s-2-.897-2-2c0-2.206-1.794-4-4-4s-4 1.794-4 4 1.794 4 4 4c1.2 0 2.266-.542 3-1.382.734.84 1.8 1.382 3 1.382 2.206 0 4-1.794 4-4 0-5.514-4.486-10-10-10zm0 12c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
            fill="#636768"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
